removed unnecessary repository in buildscripts, formatted samples, edited UpdateGeometries, added model to DistanceCompositeSymbol, edited some samples to use a toggle switch